redirecting to final site

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <meta name="twitter:player:width" content="640" />
   <meta name="twitter:player:height" content="360" />
 
-
+  <meta http-equiv="Refresh" content="0; url='https://video-dex.github.io'" />
   <title>VideoDex: Learning Dexterity from Internet Videos</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
